--- a/csb/main.lang
+++ b/csb/main.lang
@@ -51,7 +51,7 @@ Zmieni jãzëk
 
 
 ;Back to home page
-Nazôd do domôcy starnë
+Nazôd do domôcy stronë
 
 
 ;About Mozilla
@@ -79,7 +79,7 @@ Centróm prasowé
 
 
 ;Site contact
-Administratór stronë
+Administrator stronë
 
 
 ;Other languages:
@@ -107,7 +107,7 @@ Biéj do Mozilla.com
 
 
 ;Visit Mozilla.com (in English)
-Biéj do Mozilla.com (pò anielskù)
+Biéj do Mozilla.com (pò angielskù)
 
 
 ;Download Firefox - Free
@@ -191,7 +191,7 @@ Wëbierzë swój môl
 
 
 ;Download Firefox directly from your phone
-Zladëjë Firefoksa prosto na swój telefón
+Zladëjë Firefoksa prosto na swój telefon
 
 
 ;Download
@@ -239,7 +239,7 @@ Zmieni wëzdrzatk z dodôwkama
 
 
 ;Sync Your Desktop & Mobile
-Synchronizëjë swój kòmpùtr ë telefón
+Synchronizëjë swój kòmpùtr ë telefon
 
 
 ;Learn More
