--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -6,7 +6,7 @@ Miesãczné wiadła
 
 
 ;Your Email Address
-Twòj adres e-mailowi
+Twój adres e-mailowi
 
 
 ;Text
@@ -50,11 +50,11 @@ Chcemë dzelëc sã tim, jak wëdostac nôwicy z Firefoksa. Dostaniesz téż wia
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Zapiszë sã na comiesãczné wiadła, żebë wiedzëc co je czëc w Mozillë, ë dowiedzëc sã ò nônowszich mòżlëwòtach wëdostaniégò wicy z Firefoksa. To je jidealnô fòrma ùtrzimaniô łączbë!
+Zapiszë sã na comiesãczné wiadła, żebë wiedzëc co je czëc w Mozillë, ë dowiedzëc sã ò nônowszich możlëwòtach wëdostaniégò wicy z Firefoksa. To je jidealnô fòrma ùtrzimaniô łączbë!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Mómë Cë wësłoné pòcwierdzenié e-mailã. Prosto, klëkni na dostóny lënk, ë pòcwierdzë substricjô na naszą e-mailową lëstã.
+Mómë Cë wësłóné pòcwierdzenié e-mailã. Prosto, klëkni na dostóny lënk, ë pòcwierdzë subskripcjô na naszą e-mailową lëstã.
 
 
 ;Read all about it in our <span>newsletter</span>
@@ -62,7 +62,7 @@ Czëtôj wicy w naszi <span>gazéce</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Twòja substrikcjô òsta pòcwierdzonô.
+Twòja subskripcjô òsta pòcwierdzonô.
 
 
 ;Format
@@ -74,7 +74,7 @@ Jes ju fardich! <span>Czekôjże, mòże dëcht jesz ni</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Brëkùjesz przënôléżnëch jinfòrmacji? Rzekni nama përznã wicy ò se. A że ju jes na ti stronie, zapiszë sã téż na jiné wëdowiédzë òd Mozillë.
+Brëkùjesz przënôleżnëch jinfòrmacji? Rzekni nama përznã wicy ò se. A że ju jes na ti stronie, zapiszë sã téż na jiné wëdowiédzë òd Mozillë.
 
 
 ;Firefox & You
@@ -86,7 +86,7 @@ Naszé jiné òbznajmniczi:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Przezdrzi nônowszé pòradë ë wskôzczi, żebë wëdostac jak nôwicy zs swòjégò ùlubionégò przezérnika.
+Przezdrzi nônowszé pòradë ë wskôzczi, żebë wëdostac jak nôwicy ze swòjégò ùlubionégò przezérnika.
 
 
 ;Firefox Mobile
@@ -102,7 +102,7 @@ Jinfòrmacje ò wersji Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Czëtôj ò nônowszëch fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkażą jich finalné wersje.
+Czëtôj ò nônowszich fùnkcjach kòmpùtrowégò ë mòbilnégò Firefoksa, nigle sã pòkażą jich finalné wersje.
 
 
 ;Let’s Be Friends!
@@ -114,11 +114,11 @@ Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Sprôwiôj <span>Substrikcjô do Gazétów</span>
+Sprôwiôj <span>Subskripcjô do Gazétów</span>
 
 
 ;Subscribe
-Subtrikcjô
+Subskripcjô
 
 
 ;Unsubscribe
@@ -134,7 +134,7 @@ Rëmôj mie z e-mailowi lëstë Mozillë
 
 
 ;Save Preferences
-Zapiszë wëbierk
+Zapiszë wëbiérk
 
 
 ;Thanks for updating your email preferences.
@@ -182,7 +182,7 @@ Gazétë Mozillë
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Dzãka! Proszã, òtemkni swòjégò e-maila ë pòcwierdzë substrikcjô.
+Dzãka! Proszã, òtemkni swòjégò e-maila ë pòcwierdzë subskripcjô.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
@@ -191,5 +191,4 @@ Dostôniesz e-maila òd mozilla@e.mozilla.org jakno pòcwierdzenié subskripcji.
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
 Proszã, ùgwësni sã że adres: mozilla@e.mozilla.org je dopisóny do kòntaktów żebës dostawôł najé e-maile.
-
 
