--- a/csb/upgradedialog.lang
+++ b/csb/upgradedialog.lang
@@ -3,7 +3,7 @@
 
 
 ;Get the Newest Firefox
-Zledëjë nônowszégò Firefoksa
+Zladëjë nônowszégò Firefoksa
 
 
 ;The Newest Firefox is Here!
@@ -23,6 +23,4 @@ Swiérzi,  nowi wëzdrzatk
 
 
 ;More awesomeness than ever
-Wicy swiadomòscë niż czedëkòlwiek
-
-
+Wicy mòżlëwòscy niż czedëkòlwiek
