--- a/csb/videos/video_fx13.lang
+++ b/csb/videos/video_fx13.lang
@@ -1,42 +1,43 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Wiescë Firefoksa] Z nową wersją Firefoksa je lżi ë chùdzy pòrëszac sã pò sécy.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Z nową domôcą stroną, je lżi przistãp do nôpòpùlarniészëch òptacji.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Na przëmiôr, zladënczi, załóżczi, historiô, dodôwczi, synchronizacjô, ë ùstawë.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Nowô kôrta] Mómë téż pòprawioné kôrtë.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Fùnkcjô Nowô kôrta ùmòżlëwiô nawigacjã do òstatnëch ë nôczãszczi przezérónëch stron przez jedno klëkniãcé.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Bë dodac nową kôrtã, klëkni na '+' na górze przezérnika.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Nowô kôrta terô wëskrzëniwô miniaturë nôpòpùlarniészëch ë òstatnio przezérónëch stron w historii Super Lëstwë.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Mòżesz do se dopasowac kôrtë, zmieniwającë szëk miniatur, przez jich przecyganié.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Klëkni na pieskã bë stronã òsta na placu, abò klëkni na 'X', bë rëmnąc stronã.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Mòżesz téż klëknąc na jikònã 'grid' ù górë pò prawi stronie, bë dostac czëstą kôrtã.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Scygni nônowszą wersjã Firefoksa bë rozpòcząc ùżëwanié tich fùnkcji!
+
