--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -2,62 +2,79 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hùra! Twój Firefox je zaktualniony.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Twój Firefox mùszi bëc zaktualniony.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Dlô bezpiekù,  <a href="{url}">latest and greatest version</a>.
 
 
 ;You’re running an unknown version of Firefox.
 You’re running an unknown version of Firefox.
 
 
+# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
+
+
+;Hooray! Your Firefox is up to date.
+Hùra! Twój Firefox je zaktualniony.
+
+
+;Your Firefox is out of date.
+Twój Firefox mùszi bëc zaktualniony.
+
+
+;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Dlô bezpiekù, zamòdliwómë zaktualnienié do <a href="{url}">nônowszi wersji</a>.
+
+
+;You’re running an unknown version of Firefox.
+Nie jesmë gwës wersji Twòjégò Firefoksa.
+
+
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Dlô bezpiekù, zamòdliwómë scygnienié <a href="{url}">nônowszi wersji</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Przechòdzë z fùnkcji na fùnkcją<br/>chùdzy niżlë czédës
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Sprawdzë, jak nowé fùnkcje Firefoksa mògą pòmóc w chùtczészim ë efektiwniészim przezéranim.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Czëtôj wicy ò <a href="{url}">nowëch fùnkcjach kôrtów »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Czëtôj wicy ò <a href="{url}">naszi nowi domôcy stronie »</a>
 
 
 ;Keep in touch
-Keep in touch
+Ùtrzëmùje łączbã
 
 
 ;Keep it moving
-Keep it moving
+Bële do przódkù
 
 
-;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+;Get Firefox » <b>for Android</b>
+Scygni Firefox » <b>dlô Androida</b>
 
 
 ;Keep it going
-Keep it going
+Bële do przódkù
 
 
 ;Join Mozilla
-Join Mozilla
+Przëłączë sã do Mozillë
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
-
+Robòt Androida je òpiarti na zdoju <a href="%s">Googla</a> ë je ùżëwóny pòdług ùmòwów  òpisónëch w <a href="%s">Atribùtach Licencji Creative Commons 3.0</a>.
