--- a/csb/firefoxtesting.lang
+++ b/csb/firefoxtesting.lang
@@ -22,7 +22,7 @@ Firefox Beta dlô:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta dlô ùrzãdzeniów mòbilnëch
+Firefox Beta dlô ùrządzeniów mòbilnëch
 
 
 ;Download Beta and be part of the next version of Firefox.
@@ -40,7 +40,7 @@ Wëpróbùjë nônowszé ùdobrzenia wëdajnotë, personalizacji ë bezpiékù, 
 2. Ùdobrzë Firefoksa razã z nama
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-Sélôj nalazłë felë, bë pòdrëchtowac wëdajnotã ë fùnkcjonalnosc sztabilnégò òkrãżeniô.
+Sélôj nalazłë felë, bë pòdrëchtowac wëdajnotã ë fùnkcjonalnosc stabilnégò strzodowiska.
 
 
 ;3. Do Your Part
@@ -51,5 +51,4 @@ Sélôj nalazłë felë, bë pòdrëchtowac wëdajnotã ë fùnkcjonalnosc sztab
 Miéj cësk na przińdną wersjã Firefoksa ë na 450 milionów brëkòwników, chtërni gò ùżëwają co dnia.
 
 ;Supported devices
-Wspieróné urzãdzenia
-
+Wspiéróné ùrządzenia
