[es] definite l10n version of whatsnew.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105734 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/whatsnew.lang
+++ b/es-ES/whatsnew.lang
@@ -38,11 +38,11 @@ Descubre más sobre el <a href="{url}">rediseño de nuestra página de inicio »
 
 
 ;Keep in touch
-Sigue actualizado
+Sigue al día
 
 
 ;Keep it moving
-Sigue moviéndote
+Sigue en movimiento
 
 
 ;Get Firefox » <b>for Android</b>
