Corrected an error
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105735 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/whatsnew.lang
+++ b/csb/whatsnew.lang
@@ -6,30 +6,11 @@ Hùra! Twój Firefox je zaktualniony.
 
 
 ;Your Firefox is out of date.
-Twój Firefox mùszi bëc zaktualniony.
+Mùszisz zaktualnic Firefoksa.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-Dlô bezpiekù,  <a href="{url}">latest and greatest version</a>.
-
-
-;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
-
-
-# This is for the Whatsnew page: http://www-dev.allizom.org/firefox/13.0/whatsnew/
-
-
-;Hooray! Your Firefox is up to date.
-Hùra! Twój Firefox je zaktualniony.
-
-
-;Your Firefox is out of date.
-Twój Firefox mùszi bëc zaktualniony.
-
-
-;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-Dlô bezpiekù, zamòdliwómë zaktualnienié do <a href="{url}">nônowszi wersji</a>.
+Dlô bezpiekù, zamòdliwómë zaktualnienié do <a href="{url}">nônowszi, nôlepszi wersji</a>.
 
 
 ;You’re running an unknown version of Firefox.
@@ -37,7 +18,7 @@ Nie jesmë gwës wersji Twòjégò Firefoksa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-Dlô bezpiekù, zamòdliwómë scygnienié <a href="{url}">nônowszi wersji</a>.
+Dlô bezpiekù, zamòdliwómë scygnienié <a href="{url}">nônowszi, nôlepszi wersji</a>.
 
 
 ;Get to your next task<br/>faster than ever
@@ -61,15 +42,14 @@ Czëtôj wicy ò <a href="{url}">naszi nowi domôcy stronie »</a>
 
 
 ;Keep it moving
-Bële do przódkù
-
+Pòmòżë w rozwijanim
 
 ;Get Firefox » <b>for Android</b>
 Scygni Firefox » <b>dlô Androida</b>
 
 
 ;Keep it going
-Bële do przódkù
+Pòmòżë w ùtrzimanim
 
 
 ;Join Mozilla
@@ -77,4 +57,4 @@ Przëłączë sã do Mozillë
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Robòt Androida je òpiarti na zdoju <a href="%s">Googla</a> ë je ùżëwóny pòdług ùmòwów  òpisónëch w <a href="%s">Atribùtach Licencji Creative Commons 3.0</a>.
+Robòt Androida je òpiarti na zdoju <a href="%s">Googla</a> ë je ùżëwóny wedle ùmòwów  òpisónëch w <a href="%s">Atribùtach Licencji Creative Commons 3.0</a>.
