[et] lang files updates
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105737 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/et/newsletter.lang
+++ b/et/newsletter.lang
@@ -178,18 +178,18 @@ Täname, et avaldasid lahkumise põhjuse.
 
 
 ;Mozilla Newsletters
-Mozilla Newsletters
+Mozilla uudiskirjad
 
 
 ;Thanks! Please check your inbox to confirm your subscription.
-Thanks! Please check your inbox to confirm your subscription.
+Täname! Palun vaata tellimuse kinnitamiseks oma postkasti.
 
 
 ;You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
-You'll receive an email from mozilla@e.mozilla.org to confirm your subscription. If you don't see it, check your spam filter. You must confirm your subscription to receive our newsletter.
+Saadame sulle tellimuse kinnitamiseks aadressilt mozilla@e.mozilla.org kirja. Kui sa ei leia seda, siis kontrolli ka rämpsposti. Uudiskirja saamiseks pead tellimuse kinnitama.
 
 
 ;Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
-Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.
+Palun lisa aadress mozilla@e.mozilla.org oma aadressiraamatusse, siis jõuavad meie kirjad alati sinuni.
 
 
