--- a/et/snippets.lang
+++ b/et/snippets.lang
@@ -126,6 +126,6 @@ Kiire. Väga kiire. <a %s>Firefoxi Androidi versioonile tuli välja tähtis uuen
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefoxi uued võimalused võimaldavad sul järgmise ülesande kallale veelgi kiiremini asuda! <a href="%">Vaata videost järele.</a>
 
 
