el (Greek) translation of strings in various files for bug 760487 (Firefox 13's what's new page)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105738 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -126,6 +126,6 @@
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Ο Firefox έχει νέα χαρακτηριστικά για να κάνετε την επόμενη σας κίνηση ακόμα πιο γρήγορα! <a href="%">Δείτε το βίντεο για να μάθετε περισσότερα.</a>
 
 
