--- a/el/whatsnew.lang
+++ b/el/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Μπράβο! ο Firefox είναι ενημερωμένος.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Δεν έχετε τον πιο πρόσφατο Firefox.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Για λόγους ασφαλείας, συνιστούμε την αναβάθμιση στην <a href="{url}">πιο πρόσφατη και καλύτερη έκδοση</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Έχετε μια έκδοση του Firefox που δεν μπορούμε να αναγνωρίσουμε.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Για λόγους ασφαλείας, συνιστούμε τη λήψη της <a href="{url}">πιο πρόσφατης και καλύτερης έκδοσης</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Κάντε την επόμενη κίνηση σας<br/>ακόμα πιο γρήγορα από ποτέ
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Δείτε πως τα νέα χαρακτηριστικά του Firefox σας βοηθούν να περιηγηθείτε πιο γρήγορα και αποδοτικά.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Μάθετε περισσότερα για τη <a href="{url}">σελίδα νέας καρτέλας »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Μάθετε περισσότερα για την <a href="{url}">ανασχεδιασμένη αρχική σελίδα »</a>
 
 
 ;Keep in touch
-Keep in touch
+Μάθετε νέα μας
 
 
 ;Keep it moving
-Keep it moving
+Μαζί σας παντού
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Λήψη του Firefox » <b>για Android</b>
 
 
 ;Keep it going
-Keep it going
+Ακολουθήστε μας
 
 
 ;Join Mozilla
-Join Mozilla
+Ελάτε στο έργο Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Η απεικόνιση του ρομπότ του Android βασίζεται σε έργο που δημιουργήθηκε και <a href="%s">διανέμεται από την Google</a> και χρησιμοποιείται σύμφωνα με τους όρους που περιγράφονται στην άδεια χρήσης <a href="%s">Creative Commons 3.0 Αναφορά δημιουργού</a>.
 
 
