--- a/el/videos/video_fx13.lang
+++ b/el/videos/video_fx13.lang
@@ -1,42 +1,41 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-
+[Νέα χαρακτηριστικά του Firefox] Τώρα είναι ακόμα πιο εύκολο να δείτε αυτά που θέλετε, με τον πιο πρόσφατο Firefox.
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Με τη νέα σχεδίαση της αρχικής σελίδας, μπορείτε να έχετε ακόμα πιο ευκολη πρόσβαση στις επιλογές που χρησιμοποιείτε πιο συχνά,
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+όπως τις λήψεις, τους σελιδοδείκτες, το ιστορικό, τα πρόσθετα σας, το sync και τις ρυθμίσεις.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Σελίδα νέας καρτέλας] Επίσης, βελτιώσαμε τη σελίδα που παρουσιάζεται όταν ανοίγετε νέα καρτέλα.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Με τη σελίδα νέας καρτέλας, μπορείτε εύκολα να πάτε με ένα κλικ στις σελίδες που επισκέπτεστε πιο συχνά.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Για να χρησιμοποιήσετε τη σελίδα νέας καρτέλας, ανοίξτε μια νέα καρτέλα κάνοντας κλικ στο εικονίδιο «+» στο πάνω μέρος του περιηγητή.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Η σελίδα που θα ανοίξει στη νέα καρτέλα, θα περιέχει μικρογραφίες  των ιστοσελίδων που επισκέπτεστε πιο συχνά με βάση το ιστορικό της εργαλειοθήκης διευθύνσεων
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Μπορείτε να προσαρμόσετε τη σελίδα νέας καρτέλας σύροντας τις μικρογραφίες και αλλάζοντας τους θέση.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Κάντε κλικ στο εικονίδιο της πινέζας για να μονιμοποιήσετε την ιστοσελίδα σε μια θέση ή στο εικονίδιο «Χ» για να αφαιρέσετε μια σελίδα.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Μπορείτε ακόμα να κάνετε κλικ στο εικονίδιο πλέγματος, πάνω δεξιά στη σελίδα, για να απενεργοποιήσετε τη νέα σελίδα και να φορτώνεται στη θέση της μια κενή.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Κάντε λήψη του πιο πρόσφατου Firefox τώρα και χρησιμοποιήστε τα νέα χαρακτηριστικά του από σήμερα!
