"Polishing" el (Greek) translation of strings in various files for bug 760487 (Firefox 13's what's new page)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105739 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/whatsnew.lang
+++ b/el/whatsnew.lang
@@ -22,7 +22,7 @@
 
 
 ;Get to your next task<br/>faster than ever
-Κάντε την επόμενη κίνηση σας<br/>ακόμα πιο γρήγορα από ποτέ
+Κάντε την επόμενη κίνηση<br/>ακόμα πιο γρήγορα από ποτέ
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
@@ -30,11 +30,11 @@
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Μάθετε περισσότερα για τη <a href="{url}">σελίδα νέας καρτέλας »</a>
+Μάθετε για τη <a href="{url}">σελίδα νέας καρτέλας »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Μάθετε περισσότερα για την <a href="{url}">ανασχεδιασμένη αρχική σελίδα »</a>
+Μάθετε για την <a href="{url}">ανασχεδιασμένη αρχική σελίδα »</a>
 
 
 ;Keep in touch
@@ -54,7 +54,7 @@
 
 
 ;Join Mozilla
-Ελάτε στο έργο Mozilla
+Ελάτε μαζί μας
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
