[es] l10n of whatsnew.lang: a few corrections to shorten headers.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105740 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/whatsnew.lang
+++ b/es-ES/whatsnew.lang
@@ -34,7 +34,7 @@ Descubre más sobre <a href="{url}">la función Nueva pestaña »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Descubre más sobre el <a href="{url}">rediseño de nuestra página de inicio »</a>
+Descubre más sobre la <a href="{url}">nueva página de inicio »</a>
 
 
 ;Keep in touch
