"Polishing" el (Greek) translation of strings in various files for bug 760487 (Firefox 13's what's new page)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105741 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/whatsnew.lang
+++ b/el/whatsnew.lang
@@ -30,7 +30,7 @@
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Μάθετε για τη <a href="{url}">σελίδα νέας καρτέλας »</a>
+Μάθετε περισσότερα για τη <a href="{url}">σελίδα νέας καρτέλας »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
