"Polishing" el (Greek) translation of strings in various files for bug 760487 (Firefox 13's what's new page)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105742 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/el/whatsnew.lang
+++ b/el/whatsnew.lang
@@ -34,7 +34,7 @@
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Μάθετε για την <a href="{url}">ανασχεδιασμένη αρχική σελίδα »</a>
+Μάθετε περισσότερα για τη <a href="{url}">νέα αρχική σελίδα »</a>
 
 
 ;Keep in touch
