--- a/gl/videos/video_fx13.lang
+++ b/gl/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Que novidades ten o novo Firefox] Agora é máis fácil e rápido chegar a onde quere ir coa última versión do Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Co novo deseño da páxina de inicio agora pode acceder e navegar facilmente polas opcións que máis use.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Como as descargas, os marcadores, o historial, os complementos, Sync e a configuración.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[A páxina Nova lapela] Tamén se engadiron melloras na páxina Nova lapela.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Coa páxina Nova lapela, agora pode navegar facilmente polos sitios máis recentes e máis visitados cun só clic.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Para comezar a usar a páxina Nova lapela, crea unha nova lapela premendo no '+' na parte superior do navegador.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+A páxina Nova lapela amosará as miniaturas dos sitios web máis recentes e máis visitados do historial da barra incríbel.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Pode personalizar a páxina Nova lapela arrastrando as miniaturas para cambiar a orde.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Prema na chincheta para bloquear un sitio nun lugar ou no botón 'X' para retiralo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Tamén pode premer na icona 'grade' na parte superior dereita da páxina para regresar a páxina Nova lapela a branco. 
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Obteña a última versión do Firefox e comece a usar estas novas características xa!
