--- a/gl/whatsnew.lang
+++ b/gl/whatsnew.lang
@@ -2,62 +2,61 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Parabéns! O Firefox está actualizado.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+O Firefox está desactualizado.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Por razóns de seguranza, recomendámoslle que anove á <a href="{url}">última versión</a>
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Está executando unha versión do Firefox que non podemos identificar.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Por razóns de seguranza, recomendámoslle que descargue a <a href="{url}">última versión</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Ir dunha tarefa a outra<br/>máis rápido que nunca
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Descubra como navegar máis rápido coas novas características do Firefox.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Descubra o botón <a href="{url}">Nova lapela »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Descubra a nova <a href="{url}">páxina de inicio »</a>
 
 
 ;Keep in touch
-Keep in touch
+Seguir en contacto
 
 
 ;Keep it moving
-Keep it moving
+Sexa móbil
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Obter o Firefox » <b>para Android</b>
 
 
 ;Keep it going
-Keep it going
+Siga as novas
 
 
 ;Join Mozilla
-Join Mozilla
+Unirse a Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+O robot Android inspirouse nunha obra creada e compartida por <a href="%s">Google</a> e úsase de acordo os termos descritos na licenza <a href="%s">Creative Commons Atribución v3.0</a>.
 
