--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -126,6 +126,6 @@ Lynhurtig! <a %s>Firefox til Android har netop fået en stor opgradering</a>. Fo
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox har fået en ny funktion, der gør det hurtigere at komme videre til din næste opgave. Se hvordan i <a href="%">denne video</a>.
 
 
