--- a/da/whatsnew.lang
+++ b/da/whatsnew.lang
@@ -2,62 +2,63 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hurra! Din Firefox er opdateret.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Din Firefox er forældet.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Af sikkerhedsmæssige årsager anbefaler vi, at du opdaterer til den <a href="{url}">nyeste og bedste version</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Du bruger en ukendt version af Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Af sikkerhedsmæssige årsager anbefaler vi, at du henter den <a href="{url}">nyeste og bedste version</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Gå til din næste opgave<br/>hurtigere end nogensinde
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Se, hvordan de nyeste funktioner i Firefox hjælper dig med at surfe hurtigere og mere effektivt.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Lær mere om <a href="{url}">den nye fanebladsfunktion »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Lær mere om vores <a href="{url}">nydesignede startside »</a>
 
 
 ;Keep in touch
-Keep in touch
+Hold kontakten
 
 
 ;Keep it moving
-Keep it moving
+Hold den i bevægelse
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Hent Firefox » <b>til Android</b>
 
 
 ;Keep it going
-Keep it going
+Hold den i gang
 
 
 ;Join Mozilla
-Join Mozilla
+Vær med i Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android-robotten er lavet ud fra arbejde skabt og <a href="%s">delt af Google</a> og anvendt i overensstemmelse med betingelser beskrevet i <a href="%s">Creative Commons 3.0 Attribution License</a>.
+
 
 
