[l10n: gl] updated snippets.lang file for www.mozilla.org (add a new snippet for about:home)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105745 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/snippets.lang
+++ b/gl/snippets.lang
@@ -126,6 +126,6 @@ Déase présa. <a %s>Firefox para Android ten unha gran anovación</a>. Axúdeno
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+Firefox ten novas características para facer a súa próxima tarefa aínda máis rápido! <a href="%">Vexa o vídeo para obter máis información.</a>
 
 
