Updated German version of Fx 13 whatsnew page and video subtitles
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105746 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/videos/video_fx13.lang
+++ b/de/videos/video_fx13.lang
@@ -27,11 +27,11 @@ Die Neuer-Tab-Seite zeigt dann Vorschaugrafiken Ihrer zuletzt und am häufigsten
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-Sie können Ihrer Neuer-Tab-Seite anpassen, indem Sie die Vorschaugrafiken verschieben, um die Reihenfolge zu ändern.
+Sie können Ihre Neuer-Tab-Seite anpassen, indem Sie die Vorschaugrafiken verschieben und die Reihenfolge ändern.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Klicken Sie auf das Stecknadel-Symbol um die Website zu verankern, oder auf die Schaltfläche „X“, um eine Website zu entfernen.
+Klicken Sie auf das Stecknadel-Symbol, um die Website zu verankern, oder auf die Schaltfläche „X“, um eine Website zu entfernen.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
