--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -34,7 +34,7 @@ Erfahren Sie mehr über die <a href="{url}">Neuer-Tab-Funktion »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Erfahren Sie mehr über unsere <a href="{url}">neu gestaltete Startseite »</a>
+Erfahren Sie mehr über die <a href="{url}">neu gestaltete Startseite »</a>
 
 
 ;Keep in touch
@@ -46,7 +46,7 @@ Bleiben Sie in Bewegung
 
 
 ;Get Firefox » <b>for Android</b>
-Holen Sie sich Firefox » <b>für Android</b>
+Download von Firefox » <b>für Android</b>
 
 
 ;Keep it going
@@ -54,8 +54,8 @@ Verbreiten Sie die Nachricht
 
 
 ;Join Mozilla
-Machen Sie mit bei Mozilla
+Mitmachen
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Die Arbeit, aus der der Android Robot reproduziert wurde, wurde entwickelt und <a href="%s">weitergegeben von Google</a> und gemäß der Bedingungen der <a href="%s">Creative Commons 3.0 Attribution License</a> verwendet.
+Das Android-Maskottchen wurde aus einem Werk abgeleitet, das <a href="%s">von Google geschaffen und weitergegeben</a> wurde gemäß den Bedingungen der <a href="%s">Creative Commons 3.0 Attribution License</a>.
