--- a/sq/whatsnew.lang
+++ b/sq/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Urraaa! Firefox-i juaj është i përditësuar.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox-i juaj është i vjetruar.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Për arsye sigurie, këshillojmë ta përmirësoni me <a href="{url}">versionin më të ri dhe më madhështor</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Po xhironi një version të panjohur të Firefox-it.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Për arsye sigurie, këshillojmë të shkarkoni <a href="{url}">versionin më të ri dhe më madhështor</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Hidhuni te hapi juaj pasues<br/>më shpejt se kurrë
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Shihni se si veçoritë e reja të Firefox-it ju ndihmojnë të shfletoni më shpejt dhe më efektshëm.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Mësoni më tepër rreth <a href="{url}">veçorisë Skedë e Re »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Mësoni më tepër rreth <a href="{url}">faqes sonë hyrëse të rihartuar »</a>
 
 
 ;Keep in touch
-Keep in touch
+Mbani lidhjet
 
 
 ;Keep it moving
-Keep it moving
+Mbajeni të lëvizshëm
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Merrni Firefox-in » <b>për Android</b>
 
 
 ;Keep it going
-Keep it going
+Ndiqni zhvillimet
 
 
 ;Join Mozilla
-Join Mozilla
+Bëhuni Pjesë e Mozilla-s
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Roboti Android është riprodhuar sipas një punimi të krijuar dhe <a href="%s">ndarë me të tjerët nga Google</a> dhe është përdorur sipas kushteve të përshkruara te leja <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
