Shortened string for German Fx 13 whatsnew page
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105753 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/whatsnew.lang
+++ b/de/whatsnew.lang
@@ -46,7 +46,7 @@ Bleiben Sie in Bewegung
 
 
 ;Get Firefox » <b>for Android</b>
-Download von Firefox » <b>für Android</b>
+Firefox-Download » <b>für Android</b>
 
 
 ;Keep it going
