--- a/is/whatsnew.lang
+++ b/is/whatsnew.lang
@@ -2,62 +2,61 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Húrra! Firefox er með nýjustu útgáfu.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Firefox er með nýjustu útgáfu.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Vegna öryggisástæðna, mælum við með að þú uppfærir í <a href="{url}">nýjustu og bestu útgáfuna</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Þú ert að keyra óþekkta útgáfu af Firefox.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Vegna öryggisástæðna, mælum við með að þú niðurhalir <a href="{url}">nýjustu og bestu útgáfunni</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Kláraðu næsta verkefni<br/>enn hraðar
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Sjáðu nýjustu hlutina í Firefox sem hjálpa þér að vafra hraðar og skilvirkara.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Fræðast meira um <a href="{url}">nýju flipana »</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Fræðast meira um <a href="{url}">endurhönnuðu heimasíðuna okkar »</a>
 
 
 ;Keep in touch
-Keep in touch
+Vera í sambandi
 
 
 ;Keep it moving
-Keep it moving
+Halda áfram ferðinni
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Ná í Firefox » <b>fyrir Android</b>
 
 
 ;Keep it going
-Keep it going
+Halda áfram
 
 
 ;Join Mozilla
-Join Mozilla
+Gerast aðili að Mozilla
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-
+Android vélmennið var endurgert frá efni sem var búið til og <a href="%s">deilt af Google</a> og notað í samræmi við skilmála <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
