--- a/sl/whatsnew.lang
+++ b/sl/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+Hura! Vaš Firefox je na tekočem.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+Vaš Firefox je zastarel.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+Iz varnostnih razlogov vam svetujemo, da posodobite na <a href="{url}">najnovejšo in od vseh najboljšo različico</a>.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+Uporabljate neznano različico Firefoxa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+Iz varnostnih razlogov vam svetujemo, da si prenesete <a href="{url}">najnovejšo in od vseh najboljšo različico</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+Lotite se svojega dela<br/>hitreje kot kdajkoli doslej
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+Oglejte si nove poteze Firefoxa, ki vam bodo pomagale hitreje in uspešneje brskati po spletu. 
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+Oglejte si <a href="{url}">Novo stran za zavihke»</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+Oglejte si <a href="{url}">novo domačo stran »</a>
 
 
 ;Keep in touch
-Keep in touch
+Ostanite v stiku
 
 
 ;Keep it moving
-Keep it moving
+Ne ustavljajte se
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+Prenesite Firefox » <b>za Android</b>
 
 
 ;Keep it going
-Keep it going
+Ne ustavljajte se
 
 
 ;Join Mozilla
-Join Mozilla
+Pridružite se Mozilli
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot je reprodukcija dela, ki ga je ustvaril <a href="%s">dal na razpolago Google</a>, za uporabo v skladu s pogoji <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
