l10n: mr, .lang updates by Sandeep Shekmake
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@105776 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -126,6 +126,6 @@
 
 
 ;Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
-Firefox has new features to make getting to your next task even faster! <a href="%">Check out the video to learn more.</a>
+पुढच्या कार्यावर नेहमीपेक्षा पटकन जाण्यासाठी फायरफॉक्समध्ये नवीन गुणविशेष समाविष्ट केले आहेत! <a href="%">अधिक शिकण्याकरीता व्हिडीओ पहा.</a>
 
 
