--- a/mr/whatsnew.lang
+++ b/mr/whatsnew.lang
@@ -2,62 +2,62 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hooray! Your Firefox is up to date.
+अरे व्हा! फायरफॉक्स अप्टू डेट आहे.
 
 
 ;Your Firefox is out of date.
-Your Firefox is out of date.
+फायरफॉक्स जुणे झाले आहे.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणास्तव, <a href="{url}">सर्वात नवीन व मोठ्या आवृत्ती</a> करीता सुधारणा करणे शिफारसीय आहे.
 
 
 ;You’re running an unknown version of Firefox.
-You’re running an unknown version of Firefox.
+तुम्ही फायरफॉक्सची अपरिचीत आवृत्ती चालवत आहात.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
+सुरक्षा कारणास्तव, <a href="{url}">सर्वात नवीन व मोठी आवृत्ती</a> डाउनलोड करणे शिफारसीय आहे.
 
 
 ;Get to your next task<br/>faster than ever
-Get to your next task<br/>faster than ever
+पुढच्या कार्यावर<br/>नेहमीपेक्षा पटकन जा
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-See how the new features in Firefox help you browse faster and more efficiently.
+नेहमीपेक्षा पटकन व अधिक सक्षमरित्या ब्राऊज करण्यासाठी फायरफॉक्समधील नवीन गुणविशेष तपासा.
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Learn more about <a href="{url}">the New Tab feature »</a>
+<a href="{url}">नवीन टॅब गुणविशेष »</a> विषयी अधिक शिका
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Learn more about our <a href="{url}">redesigned home page »</a>
+<a href="{url}">नवीन स्वरूपाचे मुख्य पृष्ठ »</a>विषयी अधिक शिका
 
 
 ;Keep in touch
-Keep in touch
+संपर्कात रहा
 
 
 ;Keep it moving
-Keep it moving
+सतत चालू द्या
 
 
 ;Get Firefox » <b>for Android</b>
-Get Firefox » <b>for Android</b>
+फायरफॉक्स प्राप्त करा » <b>अँड्रॉइडकरीता</b>
 
 
 ;Keep it going
-Keep it going
+सतत सुरू ठेवा
 
 
 ;Join Mozilla
-Join Mozilla
+मोझीलामध्ये सामिल व्हा
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
+<a href="%s">गूगलतर्फे निर्मीत व शेअर केलेल्या</a> कार्याद्वारे अँड्राइड रोबोटचे पुनःउत्पन्न केले आहे व <a href="%s">क्रिएटिव्ह कॉमंस् 3.0 ॲट्रिब्युशन लाइसंस्</a> मध्ये वर्णन केलेल्या अटिंप्रमाणे वापरले जाते.
 
 
