--- a/sl/videos/video_fx13.lang
+++ b/sl/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+Najnovejši Firefox vam pomaga, da lažje in hitreje dosežete svoje cilje.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+S pomočjo nove domače strani lahko zdaj brez težav dostopate do najbolj pogostih možnosti v meniju.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Na primer do prenosov, zaznamkov, zgodovine, dodatkov usklajevanja in nastavitev.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+Izboljšali smo tudi stran Nov zavihek.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Odslej lahko z enim samim klikom odpirate strani, ki ste jih obiskali pred kratkim ali jih obiščete pogosto.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Za odpiranje strani Nov zavihek preprosto kliknite na '+' na vrhu svojega brskalnika.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Odprejo se pomanjšane slike strani, ki ste jih obiskali pred kratkim ali jih obiščete pogosto preko vrstice z naslovom.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Sličice na strani Nov zavihek lahko prestavljate in jih uredite, kot vam najbolj ustreza.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Kliknite na žebljiček, da spletno stran pripnete, ali na gumb 'X', da jo odstranite.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Kliknite lahko tudi na ikono desno zgoraj, če želite začeti znova s prazno stranjo.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Prenesite najnovejši Firefox in začnite uživati v novostih že danes!
