--- a/sl/whatsnew.lang
+++ b/sl/whatsnew.lang
@@ -2,7 +2,7 @@
 
 
 ;Hooray! Your Firefox is up to date.
-Hura! Vaš Firefox je na tekočem.
+Hura! Vaš Firefox je posodobljen.
 
 
 ;Your Firefox is out of date.
@@ -10,7 +10,7 @@ Vaš Firefox je zastarel.
 
 
 ;For security reasons, we recommend upgrading to the <a href="{url}">latest and greatest version</a>.
-Iz varnostnih razlogov vam svetujemo, da posodobite na <a href="{url}">najnovejšo in od vseh najboljšo različico</a>.
+Iz varnostnih razlogov vam svetujemo, da nadgradite na <a href="{url}">najnovejšo in najboljšo različico</a>.
 
 
 ;You’re running an unknown version of Firefox.
@@ -18,23 +18,23 @@ Uporabljate neznano različico Firefoxa.
 
 
 ;For security reasons, we recommend downloading to the <a href="{url}">latest and greatest version</a>.
-Iz varnostnih razlogov vam svetujemo, da si prenesete <a href="{url}">najnovejšo in od vseh najboljšo različico</a>.
+Iz varnostnih razlogov vam svetujemo, da prenesete <a href="{url}">najnovejšo in najboljšo različico</a>.
 
 
 ;Get to your next task<br/>faster than ever
-Lotite se svojega dela<br/>hitreje kot kdajkoli doslej
+Lotite se svojega dela<br/>hitreje kot kdajkoli prej
 
 
 ;See how the new features in Firefox help you browse faster and more efficiently.
-Oglejte si nove poteze Firefoxa, ki vam bodo pomagale hitreje in uspešneje brskati po spletu. 
+Oglejte si novosti Firefoxa, ki vam bodo pomagale brskati hitreje in bolj učinkovito. 
 
 
 ;Learn more about <a href="{url}">the New Tab feature »</a>
-Oglejte si <a href="{url}">Novo stran za zavihke»</a>
+Oglejte si <a href="{url}">stran Nov zavihek»</a>
 
 
 ;Learn more about our <a href="{url}">redesigned home page »</a>
-Oglejte si <a href="{url}">novo domačo stran »</a>
+Oglejte si našo <a href="{url}">novo domačo stran »</a>
 
 
 ;Keep in touch
@@ -42,7 +42,7 @@ Ostanite v stiku
 
 
 ;Keep it moving
-Ne ustavljajte se
+Bodite mobilni
 
 
 ;Get Firefox » <b>for Android</b>
@@ -50,14 +50,14 @@ Prenesite Firefox » <b>za Android</b>
 
 
 ;Keep it going
-Ne ustavljajte se
+Storite korak naprej
 
 
 ;Join Mozilla
-Pridružite se Mozilli
+Pridružite se
 
 
 ;The Android Robot was reproduced from work created and <a href="%s">shared by Google</a> and used according to terms described in the <a href="%s">Creative Commons 3.0 Attribution License</a>.
-Android Robot je reprodukcija dela, ki ga je ustvaril <a href="%s">dal na razpolago Google</a>, za uporabo v skladu s pogoji <a href="%s">Creative Commons 3.0 Attribution License</a>.
+Android Robot je reprodukcija dela, ki ga je ustvaril in <a href="%s">dal na razpolago Google</a>. Uporabljen je v skladu z določili <a href="%s">Creative Commons 3.0 Attribution License</a>.
 
 
