--- a/lij/videos/video_fx13.lang
+++ b/lij/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Cöse gh'é de nêuvo into Firefox] Òua anâ dôve t'eu l'é ciù fàçile e velôce con l'ùrtimo Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Co-a Pàgina iniçiâ redizegnâ ti peu acêde e navegâ con ciù façilitæ a-i menû e inpostaçioìn comuneménte ciù adêuviæ.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Cómme i descaregaménti, segnalìbbri, stöia, conponénti azónti, sync e inpostaçioìn.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Nêuva Pàgina di Féuggi] Émmo ànche azónto megioraménti a-a teu nêuva Pàgina di Féuggi.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Co-a Nêuva Pàgina di Féuggi, òua ti peu navegâ con façilitæ inti teu scîti ciù reçénti e ciù vixitæ con 'na sciacâ do ràtto.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Pe iniçiâ a-adêuviâ a Nêuva Pàgina di Féuggi, fànnite 'n nêuvo féuggio sciaàndo o '+'  de d'âto into teu navegatô.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+A Nêuva Pàgina di Féuggi a mostriâ òua di dizegnìn co-i scîti ciù reçénti e ciù vixitæ che són pigiæ da-a teu Belìscima Bâra da Stöia.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Ti peu personalizâ a teu Nêuva Pàgina di Féuggi rebelàndo i dizegnìn pe cangiâghe l'órdine.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Scìcca sórvia o pontìnn-a pe blocâ 'n scîto inte 'n pòsto, ò o poméllo 'X' pe scancelâlo.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Ti peu ascì sciacâ l'icónn-a 'griglia' in çìmma a dèstra da pàgina pe tornâ inderê a Nêuva Pàgina di Féuggi giànca.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Pìggite lìùrtimo Firefox òua e inìçia a-adêuviâ e nêuve caraterìstiche ancheu!
