--- a/is/videos/video_fx13.lang
+++ b/is/videos/video_fx13.lang
@@ -1,42 +1,42 @@
 ;[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
-[What's New in Firefox] It's now easier and faster to get where you want to go with the latest Firefox.
+[Hvað er nýtt í Firefox] Núna er auðveldara og fljótara að gera það sem þú vilt gera í nýjasta Firefox.
 
 
 ;With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
-With the redesigned Home page you can now easily access and navigate to your most commonly used menu options.
+Með endurhönnuðu heimasíðunni færðu hraðara viðmót og getur farið beint í mest notuðu valmyndirnar.
 
 
 ;Like downloads, bookmarks, history, add-ons, sync and settings.
-Like downloads, bookmarks, history, add-ons, sync and settings.
+Eins og niðurhal, bókamerki, feril, viðbætur, sync og stillingar.
 
 
 ;[New Tab Page] We've also added improvements to your New Tab page.
-[New Tab Page] We've also added improvements to your New Tab page.
+[Síða fyrir nýjan flipa] Einnig er búið að endurbæta síðuna fyrir nýjan flipa.
 
 
 ;With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
-With the New Tab page, you can now easily navigate to your most recent and frequently visited sites in one click.
+Með nýju flipa síðunni, geturðu auðveldlega farið með einum smelli á nýjustu og oftast heimsóttu vefsíðuna.
 
 
 ;To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
-To start using the New Tab page, create a new tab by clicking the '+' at the top of your browser.
+Til að byrja að nota nýju flipasíðuna, búðu til nýjan flipa með því að smella á '+' efst í vafranum.
 
 
 ;The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
-The New Tab page will now display thumbnails of your most recently and frequently visited websites from your Awesome Bar history.
+Nýja flipasíðan birtir núna smámynd af nýjustu og oftast heimsóttu vefsíðunum út frá innslætti í staðsetningarslá.
 
 
 ;You can customize your New Tab page by dragging the thumbnails around to change the order.
-You can customize your New Tab page by dragging the thumbnails around to change the order.
+Þú getur sérsniðið nýju flipasíðuna með því að draga smámyndirnar til og frá og breyta þannig röðun.
 
 
 ;Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
-Click on the pushpin to lock the site into place, or the 'X' button to remove a site.
+Smelltu á festihnappinn til að læsa vefsvæðinu, eða smelltu á 'X' hnappinn til að fjarlægja vefsvæði.
 
 
 ;You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
-You can also click the 'grid' icon in the top right of the page to go back to the blank new Tab page.
+Einnig er hægt að smella á grindina efst í hægra horninu til að fara til baka á tóma nýja flipa síðu.
 
 
 ;Get the latest Firefox now and start using these new features today!
-Get the latest Firefox now and start using these new features today!
+Náðu í nýjasta Firefox núna og byrjaðu að nota þessa nýju eiginleika!
